--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -140,7 +140,7 @@ stages:
         - name: keyVaultName
           value: $(SubShortName)-signin-kv
         - name: keyVaultResourceGroupName
-          value: "$(SubShortName)$(environmentId)-shd"
+          value: "$(SubShortName)-shd"
         displayName: "Deployment [${{var.Key}}] ${{parameters.location}}"
         ${{ if eq(parameters.shaUse, 'true') }}:
           ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
