--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -21,71 +21,57 @@ pr:
     - main
 
 parameters:
-- name: location
-  type: string
-  displayName: 'Select Deploy location'
-  default: westeurope
-  values:
-    - westeurope
-    - northeurope
-- name: shaUse
-  type: boolean
-  displayName: 'Use Self Host agent'
-  default: true
-- name: cdn 
-  type: boolean
-  displayName: 'New Version of CDN'
-  default: true
-- name: tran 
-  type: boolean
-  displayName: 'Transformation Deployment'
-  default: false
-- name: dev
-  type: boolean
-  displayName: 'Dev Deployment'
-  default: false
-- name: test
-  type: boolean
-  displayName: 'Test Deployment'
-  default: false
-- name: pp
-  type: boolean
-  displayName: 'Pre-Prod Deployment'
-  default: false
-- name: pr
-  type: boolean
-  displayName: 'Prod Deployment'
-  default: false
+  - name: location
+    type: string
+    displayName: 'Select Deploy location'
+    default: westeurope
+    values:
+      - westeurope
+      - northeurope
+  - name: shaUse
+    type: boolean
+    displayName: 'Use Self Host agent'
+    default: true
+  - name: cdn 
+    type: boolean
+    displayName: 'New Version of CDN'
+    default: true
+  - name: tran 
+    type: boolean
+    displayName: 'Transformation Deployment'
+    default: false
+  - name: dev
+    type: boolean
+    displayName: 'Dev Deployment'
+    default: false
+  - name: test
+    type: boolean
+    displayName: 'Test Deployment'
+    default: false
+  - name: pp
+    type: boolean
+    displayName: 'Pre-Prod Deployment'
+    default: false
+  - name: pr
+    type: boolean
+    displayName: 'Prod Deployment'
+    default: false
 
 variables:
-- group: dsi-global
-- name: tran
-  ${{ if eq(parameters.tran, 'true') }}: 
-    value: true
-  ${{ else }}:
-    value: false
-- name: dev
-  ${{ if or(eq(parameters.dev, 'true'), contains(variables['Build.SourceBranch'],'feature')) }}:
-    value: true
-  ${{ else }}:
-    value: false
-- name: test
-  ${{ if or(eq(parameters.test, 'true'), contains(variables['Build.SourceBranch'],'feature')) }}:
-    value: true
-  ${{ else }}:
-    value: false
-- name: pp
-  ${{ if and(or(eq(parameters.pp, 'true'), contains(variables['Build.SourceBranch'],'main')), not(contains(variables['Build.SourceVersionMessage'],'Upgrade to version'))) }}:
-    value: true
-  ${{ else }}:
-    value: false
-- name: pr
-  ${{ if or(eq(parameters.pr, 'true'), contains(variables['Build.SourceBranch'],'release')) }}:
-    value: true
-  ${{ else }}:
-    value: false
-- name: applicationFullName
-  value: 'ui-toolkit'    
+  - group: dsi-global
+  - group: dsi-envs-list
+  - name: tran
+    value: ${{ eq(parameters.tran, 'true') }}
+  - name: dev
+    value: ${{ or(eq(parameters.dev, 'true'), contains(variables['Build.SourceBranch'],'feature')) }}
+  - name: test
+    value: ${{ or(eq(parameters.test, 'true'), contains(variables['Build.SourceBranch'],'feature')) }}
+  - name: pp
+    value: ${{ and(or(eq(parameters.pp, 'true'), contains(variables['Build.SourceBranch'],'main')), not(contains(variables['Build.SourceVersionMessage'],'Upgrade to version'))) }}
+  - name: pr
+    value: ${{ or(eq(parameters.pr, 'true'), contains(variables['Build.SourceBranch'],'release')) }}
+  - name: applicationFullName
+    value: 'ui-toolkit'    
 
 stages:
 
@@ -99,38 +85,25 @@ stages:
       npmInstCmd: 'install --force --json --no-package-lock'
       AppDeploy: true
 
-- ${{ each var in variables }}:
-  - ${{ if in(var.key, 'tran','dev','test','pp','pr') }}:
-    - ${{ if eq(var.value, 'true') }}:
+  - ${{ each var in variables }}:
+    - ${{ if and(in(var.key, 'tran','dev','test','pp','pr'), eq(var.value, 'true')) }}:
       - stage: Deployment_${{var.Key}}
         dependsOn: 
         - scanApp
         variables:
         - name: environmentId
-          ${{ if eq(var.key, 'tran') }}:
-            value: d03
-          ${{ if eq(var.key, 'dev') }}:
-            value: d01
-          ${{ if eq(var.key, 'test') }}:
-            value: t01
-          ${{ if eq(var.key, 'pp') }}:
-            value: t02
-          ${{ if eq(var.key, 'pr') }}:
-            value: p01
-        - name: neuProjectId
-          ${{ if eq(parameters.location, 'westeurope') }}:
-            value: ""
+          value: $[variables['${{var.key}}EnvId']]
+        - name: secRegionId
+          ${{ if eq(location, 'westeurope') }}:
+            value: ''
           ${{ else }}:
-            value: "neu-"
+            value: $(secondRegionId)
         - name: SubShortName
           value: $(platformGlobalIdentifier)$(environmentId)
         - name: storageAccountName
-          ${{ if eq(parameters.location, 'westeurope') }}:
-            value: $(SubShortName)signinshdstr
-          ${{ else }}:
-            value: $(SubShortName)neusigninshdstr          
+          value: $(SubShortName)${{replace($(secRegionId),'-','')}}signinshdstr
         - name: ShdResourceGroupName
-          value: $(SubShortName)-$(neuProjectId)shd
+          value: $(SubShortName)-$(secRegionId)shd
         - name: UIContainerName
           value: ui-assets
         - name: azureCdnName
@@ -141,14 +114,11 @@ stages:
           value: $(SubShortName)-signin-kv
         - name: keyVaultResourceGroupName
           value: "$(SubShortName)-shd"
+        - name: ServConName
+          value: ${{ format('{0}{1}', var.key, 'ServCon') }}
         displayName: "Deployment [${{var.Key}}] ${{parameters.location}}"
         ${{ if eq(parameters.shaUse, 'true') }}:
-          ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
-            pool: Self-hosted Dev
-          ${{ elseif eq(var.key, 'pr') }}:
-            pool: Self-hosted Prod
-          ${{ else }}:
-            pool: Self-hosted Test
+          pool: $[variables['${{var.key}}ShaPool']]
         jobs:
         - deployment: 'Deploy_${{var.Key}}'
           displayName: Updated content of CDN
@@ -165,12 +135,7 @@ stages:
                     displayName: 'White-list keyVault'
                     condition: ${{not(parameters.shaUse)}}
                     inputs:
-                      ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
-                        azureSubscription: $(devServiceConnection)
-                      ${{ elseif eq(var.key, 'pr') }}:
-                        azureSubscription: $(prodServiceConnection)
-                      ${{ else }}:
-                        azureSubscription: $(testServiceConnection)
+                      azureSubscription: $(${{variables.ServConName}})
                       scriptType: 'pscore'
                       scriptLocation: 'scriptPath'
                       scriptPath: 'login.dfe.devops/scripts/keyvaultWhiteListCheck.ps1'
@@ -181,12 +146,7 @@ stages:
                     displayName: 'Enable Access to Storage Account'
                     condition: ${{not(parameters.shaUse)}}
                     inputs:
-                      ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
-                        azureSubscription: $(devServiceConnection)
-                      ${{ elseif eq(var.key, 'pr') }}:
-                        azureSubscription: $(prodServiceConnection)
-                      ${{ else }}:
-                        azureSubscription: $(testServiceConnection)
+                      azureSubscription: $(${{variables.ServConName}})
                       scriptType: pscore
                       scriptLocation: inlineScript
                       inlineScript: |
@@ -200,12 +160,7 @@ stages:
                     env:
                       newCdnV: ${{ parameters.cdn }}
                     inputs:
-                      ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
-                        azureSubscription: $(devServiceConnection)
-                      ${{ elseif eq(var.key, 'pr') }}:
-                        azureSubscription: $(prodServiceConnection)
-                      ${{ else }}:
-                        azureSubscription: $(testServiceConnection)
+                      azureSubscription: $(${{variables.ServConName}})
                       scriptType: pscore
                       scriptLocation: inlineScript
                       ${{ if not(parameters.shaUse) }}:
@@ -260,12 +215,7 @@ stages:
                     displayName: Remove White-list of storage
                     condition: ${{not(parameters.shaUse)}}
                     inputs:
-                      ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
-                        azureSubscription: $(devServiceConnection)
-                      ${{ elseif eq(var.key, 'pr') }}:
-                        azureSubscription: $(prodServiceConnection)
-                      ${{ else }}:
-                        azureSubscription: $(testServiceConnection)
+                      azureSubscription: $(${{variables.ServConName}})
                       scriptType: pscore
                       scriptLocation: inlineScript
                       inlineScript: |
@@ -275,12 +225,7 @@ stages:
                     displayName: 'Remove White-list keyVault'
                     condition:  ${{not(parameters.shaUse)}}
                     inputs:
-                      ${{ if or(eq(var.key, 'dev'), eq(var.key, 'tran')) }}:
-                        azureSubscription: $(devServiceConnection)
-                      ${{ elseif eq(var.key, 'pr') }}:
-                        azureSubscription: $(prodServiceConnection)
-                      ${{ else }}:
-                        azureSubscription: $(testServiceConnection)
+                      azureSubscription: $(${{variables.ServConName}})
                       scriptType: 'pscore'
                       scriptLocation: 'scriptPath'
                       scriptPath: 'login.dfe.devops/scripts/keyvaultWhiteListCheck.ps1'
@@ -309,6 +254,15 @@ stages:
 
                         git add *
                         git push origin HEAD:$branch
+
+
+      - ${{ if and(eq(var.key, 'pp'),eq(location, 'westeurope')) }}:
+        - stage: releasebranch
+          displayName: "GitHub Release Branch Creation"
+          dependsOn: 
+          - Deployment_${{var.key}}
+          jobs:
+          - template:  pipeline/releaseCreation.yml@devopsTemplates
 
       - ${{ if and(eq(var.key, 'pr'),eq(parameters.location, 'westeurope')) }}:
         - stage: branchPrTag
