--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV='development' gulp run-server build-gds",
+    "format": "prettier . --write",
     "build": "gulp build-gds",
     "start": "node server.js"
   },
@@ -34,6 +35,7 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.0",
     "gulp-uglify-es": "^3.0.0",
+    "prettier": "^3.4.2",
     "select2": "^4.0.6-rc.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
