--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "cross-env NODE_ENV='development' gulp run-server build-gds",
     "format": "prettier . --write",
     "build": "gulp build-gds",
-    "start": "node server.js"
+    "start": "node server.js",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
     "express": "^4.16.2",
@@ -35,6 +39,8 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.0",
     "gulp-uglify-es": "^3.0.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.3.0",
     "prettier": "^3.4.2",
     "select2": "^4.0.6-rc.1",
     "vinyl-buffer": "^1.0.1",
