--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "prepare": "husky",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "lint:report": "eslint . -f junit -o eslint-results.xml",
-    "test:report": "echo No tests."
+    "lint:report": "eslint . -f junit -o eslint-results.xml"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
