--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lint-staged": "^15.3.0",
     "prettier": "^3.4.2",
     "select2": "^4.0.6-rc.1",
+    "through2": "^4.0.2",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   },
