--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -146,6 +146,14 @@ stages:
                             arguments: "-keyVault $(keyVaultName) -keyVaultRg $(keyVaultResourceGroupName) -WhiteListIP $True -NotSelfHost $True"
                             workingDirectory: $(System.DefaultWorkingDirectory)
 
+                        - task: AzureKeyVault@2
+                          displayName: Load environment [${{ env }}] secrets
+                          inputs:
+                            azureSubscription: $(${{variables.ServConName}})
+                            KeyVaultName: '$(keyVaultName)'
+                            SecretsFilter: '*'
+                            RunAsPreJob: false
+                        
                         - task: AzureCLI@2
                           displayName: "Enable Access to Storage Account"
                           condition: ${{not(parameters.shaUse)}}
@@ -192,7 +200,9 @@ stages:
 
                                       if($ShdResourceGroupName -NotLike '*neu*'){
                                         #az cdn endpoint purge --content-paths /* --profile-name $(azureCdnName) -g $(ShdResourceGroupName) -n $(cdnEndpointName)
-                                        az afd endpoint purge --resource-group $(frontDoorCdnResourceGroupName) --profile-name $(frontDoorCdnProfileName) --endpoint-name $(frontDoorCdnEndpointName) --content-paths /* --debug #--domains www.contoso.com
+                                        cdnHostNameStripped=${cdnHostName#https://}
+                                        
+                                        az afd endpoint purge --resource-group $(frontDoorCdnResourceGroupName) --profile-name $(frontDoorCdnProfileName) --endpoint-name $(frontDoorCdnEndpointName) --domains $(cdnHostNameStripped) --content-paths /*
 
                                         if($env:newCdnV){
                                           $cdnAssetsVersion = $(az keyvault secret show -n cdnAssetsVersion --vault-name $(keyVaultName)).value
