--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -147,7 +147,7 @@ stages:
                             workingDirectory: $(System.DefaultWorkingDirectory)
 
                         - task: AzureKeyVault@2
-                          displayName: Load environment [${{ env }}] secrets
+                          displayName: Load environment secrets
                           inputs:
                             azureSubscription: $(${{variables.ServConName}})
                             KeyVaultName: '$(keyVaultName)'
