--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -179,13 +179,13 @@ stages:
                               workingDirectory: $(System.DefaultWorkingDirectory)
                             inlineScript: |
                               $ErrorActionPreference = "Stop"
-                              write-output "Waiting for FW rule to apply."
+                              # write-output "Waiting for FW rule to apply."
 
-                              $FWTestAttempt = 1
-                              $FWTestMax = 25
-                              Start-Sleep -Seconds 35
-                              do {
-                                  try {
+                              # $FWTestAttempt = 1
+                              # $FWTestMax = 25
+                              # Start-Sleep -Seconds 35
+                              # do {
+                              #     try {
                                       # az storage blob delete-batch --account-name $(storageAccountName) --source $(UIContainerName) --only-show-errors --auth-mode=login
                                       # if ($? -eq $false) {
                                       #   throw 'Failed to  delete-batch on storage account'
@@ -195,7 +195,7 @@ stages:
                                       #   throw 'Failed to  upload-batch on storage account'
                                       # }
 
-                                      write-output "Storage is now accessible & and data is uploaded"
+                                      # write-output "Storage is now accessible & and data is uploaded"
 
                                       if($ShdResourceGroupName -NotLike '*neu*'){
                                         #az cdn endpoint purge --content-paths /* --profile-name $(azureCdnName) -g $(ShdResourceGroupName) -n $(cdnEndpointName)
@@ -213,19 +213,19 @@ stages:
                                         # }
                                       }
 
-                                      exit 0
-                                  }
-                                  catch {
-                                      if ($FWTestAttempt -lt $FWTestMax) {
-                                          write-output "Unable to access storage account $FWTestAttempt/$FWTestMax. Waiting for FW rule to take effect."
-                                          $FWTestAttempt++
-                                          Start-Sleep -Seconds 20
-                                      }
-                                      else {
-                                          Write-Error "Unable to access storage account $FWTestAttempt/$FWTestMax."
-                                      }
-                                  }
-                              } while ($FWTestAttempt -lt $FWTestMax)
+                              #         exit 0
+                              #     }
+                              #     catch {
+                              #         if ($FWTestAttempt -lt $FWTestMax) {
+                              #             write-output "Unable to access storage account $FWTestAttempt/$FWTestMax. Waiting for FW rule to take effect."
+                              #             $FWTestAttempt++
+                              #             Start-Sleep -Seconds 20
+                              #         }
+                              #         else {
+                              #             Write-Error "Unable to access storage account $FWTestAttempt/$FWTestMax."
+                              #         }
+                              #     }
+                              # } while ($FWTestAttempt -lt $FWTestMax)
 
                         - task: AzureCLI@2
                           displayName: Remove White-list of storage
