switch exit for break

--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -197,7 +197,7 @@ stages:
                                         throw 'Failed to  upload-batch on storage account'
                                       }
 
-                                      exit 0
+                                      break
                                   }
                                   catch {
                                       if ($FWTestAttempt -lt $FWTestMax) {
