--- a/DevOps/pipeline/azure-pipeline.yml
+++ b/DevOps/pipeline/azure-pipeline.yml
@@ -31,7 +31,7 @@ parameters:
   - name: shaUse
     type: boolean
     displayName: "Use Self Host agent"
-    default: false
+    default: true
   - name: cdn
     type: boolean
     displayName: "New Version of CDN"
